02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-challenge
spec:
  type: NodePort
  selector:
    app: kubernetes-challenge
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
